Single DEB package